Fixing iOS issue with svg patterns not showing.  Turns out it was the css animation with too many keyframes

--- a/app/styl/card.styl
+++ b/app/styl/card.styl
@@ -44,7 +44,7 @@ card-height = card-width*1.5;
     cursor: pointer;
 
     &.elastic {
-        animation: elastic-in 1s both linear;
+        animation: bounceIn 0.75s both linear;
     }
     
     // animation: fade-in 2s both linear;
