--- a/app/styl/elastic-in.styl
+++ b/app/styl/elastic-in.styl
@@ -1,73 +1,111 @@
 /* generated by http://www.css3animationgenerator.com */
 @keyframes elastic-in {
-	0% {transform: scale(0);}
-	1% {transform: scale(0.09);}
-	2% {transform: scale(0.2);}
-	3% {transform: scale(0.34);}
-	4% {transform: scale(0.49);}
-	5% {transform: scale(0.65);}
-	6% {transform: scale(0.8);}
-	7% {transform: scale(0.94);}
-	8% {transform: scale(1.06);}
-	9% {transform: scale(1.17);}
-	10% {transform: scale(1.25);}
-	11% {transform: scale(1.31);}
-	12% {transform: scale(1.35);}
-	13% {transform: scale(1.37);}
-	14% {transform: scale(1.37);}
-	15% {transform: scale(1.35);}
-	16% {transform: scale(1.32);}
-	17% {transform: scale(1.28);}
-	18% {transform: scale(1.23);}
-	19% {transform: scale(1.18);}
-	20% {transform: scale(1.13);}
-	21% {transform: scale(1.07);}
-	22% {transform: scale(1.02);}
-	23% {transform: scale(0.98);}
-	24% {transform: scale(0.94);}
-	25% {transform: scale(0.91);}
-	26% {transform: scale(0.89);}
-	27% {transform: scale(0.88);}
-	28% {transform: scale(0.87);}
-	29% {transform: scale(0.87);}
-	30% {transform: scale(0.88);}
-	31% {transform: scale(0.89);}
-	32% {transform: scale(0.9);}
-	33% {transform: scale(0.92);}
-	34% {transform: scale(0.94);}
-	35% {transform: scale(0.96);}
-	36% {transform: scale(0.97);}
-	37% {transform: scale(0.99);}
-	38% {transform: scale(1.01);}
-	39% {transform: scale(1.02);}
-	40% {transform: scale(1.03);}
-	41% {transform: scale(1.04);}
-	42% {transform: scale(1.04);}
-	43% {transform: scale(1.05);}
-	44% {transform: scale(1.05);}
-	45% {transform: scale(1.04);}
-	47% {transform: scale(1.04);}
-	48% {transform: scale(1.03);}
-	49% {transform: scale(1.02);}
-	50% {transform: scale(1.02);}
-	51% {transform: scale(1.01);}
-	52% {transform: scale(1);}
-	53% {transform: scale(1);}
-	54% {transform: scale(0.99);}
-	65% {transform: scale(0.99);}
-	66% {transform: scale(1);}
-	71% {transform: scale(1);}
-	76% {transform: scale(1.01);}
-	77% {transform: scale(1);}
-	100% {transform: scale(1);}
+    0% {transform: scale(0);}
+    1% {transform: scale(0.09);}
+    2% {transform: scale(0.2);}
+    3% {transform: scale(0.34);}
+    4% {transform: scale(0.49);}
+    5% {transform: scale(0.65);}
+    6% {transform: scale(0.8);}
+    7% {transform: scale(0.94);}
+    8% {transform: scale(1.06);}
+    9% {transform: scale(1.17);}
+    10% {transform: scale(1.25);}
+    11% {transform: scale(1.31);}
+    12% {transform: scale(1.35);}
+    13% {transform: scale(1.37);}
+    14% {transform: scale(1.37);}
+    15% {transform: scale(1.35);}
+    16% {transform: scale(1.32);}
+    17% {transform: scale(1.28);}
+    18% {transform: scale(1.23);}
+    19% {transform: scale(1.18);}
+    20% {transform: scale(1.13);}
+    21% {transform: scale(1.07);}
+    22% {transform: scale(1.02);}
+    23% {transform: scale(0.98);}
+    24% {transform: scale(0.94);}
+    25% {transform: scale(0.91);}
+    26% {transform: scale(0.89);}
+    27% {transform: scale(0.88);}
+    28% {transform: scale(0.87);}
+    29% {transform: scale(0.87);}
+    30% {transform: scale(0.88);}
+    31% {transform: scale(0.89);}
+    32% {transform: scale(0.9);}
+    33% {transform: scale(0.92);}
+    34% {transform: scale(0.94);}
+    35% {transform: scale(0.96);}
+    36% {transform: scale(0.97);}
+    37% {transform: scale(0.99);}
+    38% {transform: scale(1.01);}
+    39% {transform: scale(1.02);}
+    40% {transform: scale(1.03);}
+    41% {transform: scale(1.04);}
+    42% {transform: scale(1.04);}
+    43% {transform: scale(1.05);}
+    44% {transform: scale(1.05);}
+    45% {transform: scale(1.04);}
+    47% {transform: scale(1.04);}
+    48% {transform: scale(1.03);}
+    49% {transform: scale(1.02);}
+    50% {transform: scale(1.02);}
+    51% {transform: scale(1.01);}
+    52% {transform: scale(1);}
+    53% {transform: scale(1);}
+    54% {transform: scale(0.99);}
+    65% {transform: scale(0.99);}
+    66% {transform: scale(1);}
+    71% {transform: scale(1);}
+    76% {transform: scale(1.01);}
+    77% {transform: scale(1);}
+    100% {transform: scale(1);}
+}
+
+.bounceIn {
+    animation-name: bounceIn;
+    animation-duration: .75s;
+}
+
+@keyframes bounceIn {
+    0%, 20%, 40%, 60%, 80%, 100% {
+        transition-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
+    }
+
+    0% {
+        opacity: 1;
+        transform: scale3d(.3, .3, .3);
+    }
+
+    20% { 
+        transform: scale3d(1.15, 1.15, 1.15);
+    }
+
+    40% {
+        transform: scale3d(.85, .85, .85);
+    }
+
+    60% {
+        opacity: 1;
+        transform: scale3d(1.04, 1.04, 1.04);
+    }
+
+    80% {
+        transform: scale3d(.97, .97, .97);
+    }
+
+    100% {
+        opacity: 1;
+        transform: scale3d(1, 1, 1);
+    }
 }
 
 
 
 /* generated by http://www.css3animationgenerator.com */
 @keyframes select-pop {
-	0%   { transform: scale(1); }
-	50%  { transform: scale(.95); }
-	100% { transform: scale(1.05); }
+    0%   { transform: scale(1); }
+    50%  { transform: scale(.95); }
+    100% { transform: scale(1.05); }
 }
 
